# 3dslicer_module

./: module_v.py
LVC_test/: 2021-01-20-Scene.mrml  Segmentation-label.nrrd  Segmentation-label_ColorTable.ctbl  Segmentation.seg.nrrd  form.py  from.ui  module_v.py  pynrrd_module.py
Module1/Module1/: CMakeLists.txt
Module1/Module1/M1/: CMakeLists.txt  M1.py
